test/success/nostd/basics/struct_method_call/main.sk
module Main {

struct Q {
    fn foo(a: Q) {

    }
}

fn main() {
    Q().foo();
    let a = Q();
    a.foo();
}

}