test/errors/fieldnotfound/main.sk
module Main {

class Object {

}

fn main() {
    let a = Object();
    a.foo;
}

}
